# nba-roi

./: .gitignore  README.md  README.txt  pyproject.toml  requirements.txt
data/processed/: bref_advanced_stats.csv  bref_per_game_stats.csv  master.csv  player_exp.csv  standings.csv
data/raw/: bref_advanced_stats.csv  bref_per_game_stats.csv  espn_salaries.csv  player_exp.csv  salaries.csv  standings.csv
results/: 04_visualizations.ipynb  visualizations_clean.ipynb
src/: analyze_visualize.py  clean_data.py  get_data.py  integrate_data.py  scrape_bref_teams.py  scraper.py  scraper_bref.py  scraper_espn.py  scraper_nba_api.py
src/utils/: constants.py  helpers.py
